--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <title>TPP App</title>
+    <title>TPP Stock Trade</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
